@@ -5,6 +5,8 @@ apt (0.8.15.7) UNRELEASED; urgency=low
     - ignore "self"-conflicts for all architectures of a package
       instead of just for the architecture of the package locked at
       in the ordering of installations too (Closes: #802901)
+    - M-A:same lockstep unpack should operate on installed
+      packages first (LP: #835625)
   * test/*
     - reorganize the various testcases and helper we have and
       integrate them better into the buildsystem
@@ -36,7 +38,7 @@ apt (0.8.15.7) UNRELEASED; urgency=low
     - reword Acquire::Max-ValidTime documentation to make clear
       that it doesn't provide the new Min-ValidTime functionality
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 05 Sep 2011 15:53:12 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 09 Sep 2011 12:34:04 +0200
 
 apt (0.8.15.6) unstable; urgency=low
 
